--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -137,3 +137,56 @@
   transform: rotate(90deg);
   width: 200px;
 }
+
+@media (max-width: 1440px) {
+  .title-container {
+    right: 25px;
+
+    h2 {
+      font-size: 45px;
+    }
+
+    h3 {
+      font-size: 55px;
+      margin-top: 26px;
+    }
+  }
+
+  .photo-big {
+    width: 500px;
+    height: 650px;
+    left: 10%;
+  }
+
+  .profile-shadow {
+    left: -5%;
+    position: relative;
+  }
+}
+
+@media (max-width: 1200px) {
+  .photo-big {
+    left: 5%;
+  }
+
+  .profile-shadow {
+    left: -15%;
+  }
+}
+
+@media (max-width: 1100px) {
+  h2 {
+    font-size: 40px;
+    line-height: 42.6px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .photo-big {
+    left: 0;
+  }
+
+  .profile-shadow {
+    left: -20%;
+  }
+}
