--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -11,23 +11,13 @@
   <div class="project-section">
     <div
       class="single-project"
-      [ngClass]="project.reverseClass"
+      [ngClass]="{ reverse: project.reverseClass === 'row-reverse' }"
       *ngFor="let project of projects"
     >
       <div class="project-img">
-        <img
-          [ngStyle]="{
-            'margin-left':
-              project.reverseClass === 'row-reverse' ? '100px' : '0'
-          }"
-          [src]="project.image"
-          [alt]="project.imageAlt"
-        />
+        <img [src]="project.image" [alt]="project.imageAlt" />
       </div>
-      <div
-        class="project-text"
-        [ngClass]="{ 'flex-end': project.reverseClass === 'row-reverse' }"
-      >
+      <div class="project-text">
         <h2>{{ project.title }}</h2>
         <h3>{{ project.technologies }}</h3>
         <p>{{ project.description }}</p>
