--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,18 +1,20 @@
 <div class="main-page-container" id="main-page">
-  <app-header></app-header>
-
   <div class="profile-container">
     <div class="profile-picture">
-      <img
-        class="profile-shadow"
-        src="assets/img/photo_shadow_1.png"
-        alt="photo_shadow"
-      />
+      <div class="shadow-container">
+        <img
+          class="profile-shadow"
+          src="assets/img/photo_shadow_1.png"
+          alt="photo_shadow"
+        />
+      </div>
       <img class="photo-big" src="assets/file.png" />
     </div>
 
     <div class="title-container">
-      <h3>I am</h3>
+      <div class="relative-container">
+        <h3>I am</h3>
+      </div>
       <div class="title">
         <h1>Özcan Mirzanli</h1>
         <h2>FRONTEND DEVELOPER</h2>
