--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -5,15 +5,24 @@
   width: 100%;
 }
 
+.shadow-container {
+  position: relative;
+}
+
 .profile-shadow {
-  margin-top: 150px;
+  position: absolute;
+}
+
+.profile-picture {
+  width: 646px;
+  height: 705px;
 }
 
 .title-container {
   display: flex;
   align-items: flex-start;
   margin-bottom: 50px;
-  position: absolute;
+  position: relative;
   right: 0;
 
   h3 {
@@ -24,6 +33,10 @@
     transform: rotate(270deg);
     margin-top: 50px;
     margin-right: -20px;
+  }
+
+  h1 {
+    font-size: 82px;
   }
 }
 
@@ -142,6 +155,10 @@
   .title-container {
     right: 25px;
 
+    h1 {
+      font-size: 63px;
+    }
+
     h2 {
       font-size: 45px;
     }
@@ -162,6 +179,10 @@
     left: -5%;
     position: relative;
   }
+
+  .profile-picture {
+    width: 50%;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -170,23 +191,38 @@
   }
 
   .profile-shadow {
-    left: -15%;
+    left: -20%;
+  }
+
+  .profile-picture {
+    width: 45%;
+  }
+
+  .green-btn {
+    margin-top: 30px;
   }
 }
 
 @media (max-width: 1100px) {
+  .profile-container {
+    flex-direction: column;
+  }
+
+  .profile-picture {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .profile-shadow,
+  .photo-big {
+    left: unset;
+  }
+
   h2 {
     font-size: 40px;
     line-height: 42.6px;
-  }
-}
-
-@media (max-width: 1000px) {
-  .photo-big {
-    left: 0;
-  }
-
-  .profile-shadow {
-    left: -20%;
   }
 }
