--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -157,3 +157,10 @@ h3 {
     margin-right: 12%;
   }
 }
+
+@media (max-width: 1100px) {
+  .my-skills {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
