--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -189,16 +189,27 @@ span {
   .contact-text {
     margin-left: 5%;
   }
+
+  .go-up-btn {
+    width: 95%;
+  }
 }
 
-@media (max-width: 1000px) {
-  .purple-border-big {
-    width: 30%;
+@media (max-width: 1100px) {
+  .contact-section {
+    flex-direction: column;
+    align-items: center;
   }
 
   input,
   textarea {
+    margin: 0 auto;
+    margin-bottom: 5% !important;
     width: 80%;
+  }
+
+  .purple-border-big {
+    width: 30%;
   }
 
   .contact-text {
