--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -150,3 +150,50 @@ h3 {
     }
   }
 }
+
+@media (max-width: 1100px) {
+  .single-project,
+  .single-project.reverse {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .single-project.reverse {
+    img {
+      margin-left: 0 !important;
+    }
+  }
+
+  .project-section {
+    margin: 0 auto;
+  }
+
+  .single-project {
+    margin-bottom: 400px;
+  }
+
+  .buttons-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project-text {
+    align-items: center;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  .project-img {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    img {
+      margin-right: 0;
+    }
+  }
+}
