project structure improvements

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<div class="main-page-container" id="main-page">
+<div class="landing-page-container" id="landing-page">
   <div class="profile-container">
     <div class="profile-picture">
       <div class="shadow-container">
