--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
 
 <div class="footer-container">
   <div class="title-impressum">
-    <a href="#main-page"><h2>Özcan</h2> </a>
+    <a [routerLink]="['/landing-page']"><h2>Özcan</h2> </a>
     <a [routerLink]="['/impressum']" (click)="scrollToTop()">Impressum</a>
   </div>
   <div class="date">
