--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,15 +1,16 @@
 <div class="header">
   <div class="header-content">
-    <a href="#main-page"><h2>Özcan</h2></a>
+    <a href="#landing-page"><h2>Özcan</h2></a>
 
     <div class="header-links">
-      <a
-        *ngFor="let link of links"
-        [href]="link.href"
-        (click)="setActiveLink(link.href)"
-        [ngClass]="{ 'active-link': activeLink === link.href }"
-        >{{ link.text }}</a
-      >
+      <ul>
+        <li *ngFor="let link of links">
+          <a [href]="link.href" routerLinkActive="active-link">
+            {{ link.text }}
+          </a>
+        </li>
+      </ul>
+      <div></div>
     </div>
 
     <div
