--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,9 @@
-<app-burger-menu
+<app-header
+  [isScreenSmall]="isScreenSmall"
   [isMenuOpen]="isMenuOpen"
-  (closeMenu)="closeBurgerMenu()"
-></app-burger-menu>
-
-<ng-container *ngIf="showMainContent">
-  <app-header
-    [isScreenSmall]="isScreenSmall"
-    [isMenuOpen]="isMenuOpen"
-    (openMenu)="openBurgerMenu()"
-  ></app-header>
-
-  <app-main-page></app-main-page>
-  <app-about-me id="about-me"></app-about-me>
-  <app-my-skills id="my-skills"></app-my-skills>
-  <app-portfolio id="portfolio"></app-portfolio>
-  <app-contact id="contact"></app-contact>
-  <app-footer></app-footer>
-</ng-container>
+  (openMenu)="openBurgerMenu()"
+></app-header>
+<app-main-content></app-main-content>
+<app-footer></app-footer>
 
 <router-outlet></router-outlet>
