--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -35,6 +35,11 @@ a {
   text-decoration: none;
 }
 
+ul {
+  display: flex;
+  text-decoration: none;
+}
+
 .header-content {
   max-width: 1440px;
   display: flex;
@@ -49,6 +54,22 @@ a {
 
 .header-links a.active-link {
   color: var(--primary-color);
+  position: relative;
+}
+
+.header-links a.active-link::after {
+  content: "";
+  display: block;
+  width: 55px;
+  border-bottom: 3px solid var(--secondary-color);
+  position: absolute;
+  left: 0;
+}
+
+.active-border {
+  width: 55.5px;
+  border-bottom: 3px solid var(--secondary-color);
+  margin-top: 5px;
 }
 
 @media (max-width: 1100px) {
