--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -79,7 +79,10 @@
           />
           <span
             >I've read the
-            <a [routerLink]="['/privacy']" href="#" (click)="scrollToTop()"
+            <a
+              [routerLink]="['/app-privacy-policy']"
+              href="#"
+              (click)="scrollToTop()"
               ><span class="purple">privacy policy </span></a
             >and agree to the processing of my data as outlined.</span
           >
@@ -109,7 +112,7 @@
     </form>
   </div>
   <div class="go-up-btn">
-    <a href="#main-page">
+    <a href="#landing-page">
       <img src="assets/img/go_up_btn.png" alt="go_up_btn" />
     </a>
   </div>
