--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,8 +1,6 @@
-<app-header></app-header>
-
 <div class="main-container">
-  <div class="impressum-container">
-    <h1>Impressum</h1>
+  <div class="imprint-container">
+    <h1>Imprint</h1>
 
     <h3>
       &Ouml;zcan Mirzanli<br />
@@ -22,5 +20,3 @@
     </h3>
   </div>
 </div>
-
-<app-footer></app-footer>
