--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -14,7 +14,7 @@ html {
   flex-direction: column;
 }
 
-.impressum-container {
+.imprint-container {
   flex: 1; /* Makes the content area take up the remaining space */
   display: flex;
   align-items: center;
