--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,8 +2,8 @@
 
 <div class="footer-container">
   <div class="title-impressum">
-    <a [routerLink]="['/landing-page']"><h2>Özcan</h2> </a>
-    <a [routerLink]="['/impressum']" (click)="scrollToTop()">Impressum</a>
+    <a href="#landing-page"><h2>Özcan</h2> </a>
+    <a [routerLink]="['/app-imprint']" (click)="scrollToTop()">Imprint</a>
   </div>
   <div class="date">
     <span>© Özcan Mirzanli 2024</span>
