burger menu button animation added

--- a/src/app/burger-menu/burger-menu.component.html
+++ b/src/app/burger-menu/burger-menu.component.html
@@ -1,12 +1,5 @@
 <div class="burger-menu-layer" *ngIf="isMenuOpen">
-  <div class="close-btn-container">
-    
-    <img
-      src="assets/img/burger_menu_close_btn.png"
-      alt="burger_menu_close_btn"
-      (click)="closeBurgerMenu()"
-    />
-  </div>
+  <div class="close-btn-container"></div>
 
   <div class="burger-menu-links">
     <a href="#about-me">About me</a>
