--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
-<app-header
-  [isScreenSmall]="isScreenSmall"
+<app-burger-menu
   [isMenuOpen]="isMenuOpen"
-  (openMenu)="openBurgerMenu()"
+  (closeMenu)="toggleBurgerMenu()"
+></app-burger-menu>
+
+<app-header
+  [isMenuOpen]="isMenuOpen"
+  [isScreenSmall]="isScreenSmall"
+  (openMenu)="toggleBurgerMenu()"
 ></app-header>
 
 <router-outlet></router-outlet>
