--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -50,7 +50,48 @@ ul {
 }
 
 .burger-menu-btn {
-  display: none !important;
+  div {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    margin-right: 35px;
+    z-index: 999;
+  }
+
+  .line-1 {
+    transform: translate(-50%, -850%);
+  }
+
+  .line-3 {
+    transform: translate(-50%, 700%);
+  }
+}
+
+.click-menu {
+  margin-top: 25px;
+
+  .line-1 {
+    transform: translate(-50%, -850%) rotate(-45deg);
+  }
+
+  .line-3 {
+    transform: translate(-50%, -850%) rotate(45deg);
+  }
+
+  .line-2 {
+    width: 0;
+  }
+}
+
+.burger-menu-btn span {
+  background-color: white;
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.25s, width 0.25s;
 }
 
 .header-links a.active-link {
