--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -26,8 +26,9 @@
       </div>
     </div>
   </div>
-  <img class="background" src="assets/img/background.png" alt="background" />
-
+  <div class="background-container">
+    <img class="background" src="assets/img/background.png" alt="background" />
+  </div>
   <div class="contact-links-container">
     <div class="contact-options">
       <div class="purple-border"></div>
