--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -66,8 +66,8 @@
 
 .background {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   top: 55%;
   left: 0;
 }
@@ -206,10 +206,14 @@
 @media (max-width: 1100px) {
   .title-container {
     z-index: 9;
+    right: 0;
+    margin-bottom: 0;
+    bottom: 80px;
   }
 
   .profile-container {
     flex-direction: column;
+    justify-content: flex-end;
   }
 
   .profile-picture {
@@ -225,11 +229,6 @@
     left: unset;
   }
 
-  h2 {
-    font-size: 40px;
-    line-height: 42.6px;
-  }
-
   .scroll-text {
     display: none;
   }
@@ -241,7 +240,7 @@
   }
 
   .shadow-container {
-    margin-top: 30%;
+    margin-top: 350px;
   }
 
   .about-me-text {
@@ -249,6 +248,121 @@
   }
 
   .green-btn {
-    margin-top: 0;
+    margin-top: 10px;
+  }
+
+  .background {
+    top: 45%;
+  }
+
+  .contact-links-container {
+    bottom: 20px;
+  }
+}
+
+@media (max-width: 700px) {
+  .title-container {
+    right: 10px;
+
+    h1 {
+      font-size: 53px;
+      line-height: 50px;
+    }
+
+    h2 {
+      font-size: 38px;
+      line-height: 50px;
+    }
+
+    h3 {
+      line-height: 50px;
+      font-size: 41px;
+      margin-top: 22px;
+    }
+  }
+
+  .shadow-container {
+    margin-top: 250px;
+  }
+
+  .photo-big {
+    width: 400px;
+    height: 525px;
+  }
+
+  .green-btn {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 35px;
+  }
+
+  .contact-links {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    a {
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  .purple-border {
+    position: absolute;
+    width: 93px;
+  }
+}
+
+@media (max-width: 500px) {
+  .title-container {
+    h1 {
+      font-size: 43px;
+      line-height: 40px;
+    }
+
+    h2 {
+      font-size: 30.5px;
+      line-height: 40px;
+    }
+
+    h3 {
+      line-height: 40px;
+      font-size: 31px;
+      margin-top: 16px;
+      margin-right: -10px;
+    }
+  }
+
+  .designed-btn {
+    font-size: 16px;
+  }
+
+  .contact-links-container {
+    justify-content: center;
+  }
+
+  .purple-border {
+    width: 80px;
+  }
+}
+
+@media (max-width: 400px) {
+  .title-container {
+    h1 {
+      font-size: 31px;
+    }
+
+    h2 {
+      font-size: 22px;
+    }
+
+    h3 {
+      font-size: 26px;
+    }
+  }
+
+  .purple-border {
+    width: 60px;
   }
 }
