--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -42,6 +42,7 @@ ul {
 }
 
 .header-content {
+  width: 100%;
   max-width: 1440px;
   display: flex;
   align-items: center;
@@ -130,5 +131,21 @@ ul {
   .header {
     padding-top: 23px;
     padding-bottom: 23px;
+  }
+}
+
+@media (max-width: 700px) {
+  .header {
+    h2 {
+      margin-left: 50px;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .header {
+    h2 {
+      font-size: 38px;
+    }
   }
 }
