--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -19,8 +19,7 @@
   flex-direction: column;
   width: 664px;
   height: 500px;
-  margin-left: 100px;
-  margin-right: 105px;
+  margin: 0 auto;
 }
 
 .skill-row {
@@ -28,14 +27,16 @@
   flex-direction: row;
   width: 100%;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-evenly;
+  position: relative;
 
   span {
     color: white;
     font-size: 16px;
     font-weight: 700;
     line-height: 19.2px;
-    margin-top: 10px;
+    position: absolute;
+    bottom: -25px;
     text-align: center;
   }
 }
@@ -57,7 +58,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 105px;
 
   img {
     &:hover {
@@ -144,21 +144,10 @@ h3 {
 @media (max-width: 1440px) {
   .my-skills-logos {
     width: 500px;
-    margin-right: 10%;
-  }
-
-  .single-skill {
-    margin-right: 15%;
   }
 
   h3 {
     font-size: 28px;
-  }
-}
-
-@media (max-width: 1200px) {
-  .single-skill {
-    margin-right: 12%;
   }
 }
 
@@ -169,7 +158,6 @@ h3 {
   }
 
   .my-skills-logos {
-    margin: 0 auto;
     width: 100%;
     align-items: center;
     justify-content: space-evenly;
@@ -187,16 +175,12 @@ h3 {
     margin-right: 0;
   }
 
-  .single-skill {
-    margin-right: 0;
+  .my-skills-container {
+    padding-top: 125px;
   }
 
   .skill-row {
-    justify-content: space-evenly;
-  }
-
-  .my-skills-container {
-    padding-top: 125px;
+    justify-content: space-around;
   }
 }
 
@@ -210,7 +194,53 @@ h3 {
     width: 60px;
   }
 
+  .single-skill {
+    img {
+      width: 48px;
+    }
+  }
+
+  .my-skills-text {
+    width: 90%;
+  }
+
+  .green-btn {
+    font-size: 16px;
+    line-height: 19.2px;
+  }
+
   .my-skills-info {
-    margin-right: 70px;
+    a {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      text-decoration: none;
+    }
+  }
+
+  .skill-row {
+    width: 90%;
+    span {
+      font-size: 14px;
+      font-weight: 600;
+      bottom: -30px;
+    }
+
+    img {
+      width: 40px;
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .my-skills-info {
+    p {
+      text-align: center;
+    }
+
+    h3 {
+      font-size: 21px;
+      margin: 0 auto;
+    }
   }
 }
