--- a/src/app/burger-menu/burger-menu.component.html
+++ b/src/app/burger-menu/burger-menu.component.html
@@ -2,9 +2,12 @@
   <div class="close-btn-container"></div>
 
   <div class="burger-menu-links">
-    <a href="#about-me">About me</a>
-    <a href="#my-skills">Skills</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
+    <a
+      *ngFor="let link of links"
+      [href]="link.href"
+      (click)="closeBurgerMenu()"
+    >
+      {{ link.text }}
+    </a>
   </div>
 </div>
