Privacy Policy translated

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -9,14 +9,14 @@
     </h3>
     <br />
     <br />
-    <h2>Kontakt</h2>
+    <h2>Contact</h2>
     <h3>
       Telefon: 017685463990<br />
       E-Mail: ozcanmirzanli&#64;proton.me
     </h3>
 
     <h3>
-      Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a>
+      Source: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a>
     </h3>
   </div>
 </div>
