updated about me text

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,11 +3,11 @@
     <div class="about-me-text">
       <h1>About me</h1>
       <p>
-        Hi, I'm a Frontend Developer based in Berlin. Lorem, ipsum dolor sit
-        amet consectetur adipisicing elit. Quis accusantium temporibus
-        reprehenderit odit ipsam dolor saepe, nostrum rem, accusamus suscipit
-        optio similique error voluptas. Nisi sit repudiandae ducimus provident
-        libero!
+        Hi, I'm a passionate Frontend Developer based in Berlin. I thrive on
+        turning complex ideas into intuitive and visually appealing user
+        experiences. As Edsger Dijkstra wisely said, “The art of programming is
+        the art of organizing complexity, mastering variety, and avoiding
+        chaos.” This philosophy drives me to excel in my work.
       </p>
       <div class="about-me-details">
         <div class="about-me-single">
@@ -21,10 +21,12 @@
         <div class="about-me-single">
           <img src="assets/img/bulb.png" alt="bulb" />
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
-            quis quas esse quidem, quod, doloremque illum mollitia aliquam
-            voluptate eaque sequi non quia dolor voluptatum pariatur modi
-            consequuntur odio ducimus!
+            I'm a dedicated problem-solver who enjoys tackling challenges
+            head-on. I relish the opportunity to dive into complex challenges,
+            dissecting them into manageable parts, and crafting elegant
+            solutions. Whether it’s troubleshooting bugs, optimizing
+            performance, or refining user interactions, I’m committed to finding
+            effective, innovative answers.
           </p>
         </div>
         <div class="about-me-single">
@@ -34,10 +36,11 @@
             style="margin-right: 27px"
           />
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
-            quis quas esse quidem, quod, doloremque illum mollitia aliquam
-            voluptate eaque sequi non quia dolor voluptatum pariatur modi
-            consequuntur odio ducimus!
+            My creativity shines through when I translate Figma designs into
+            functional, user-friendly websites with innovative features. Whether
+            it's crafting responsive layouts or implementing engaging
+            interactive elements, I take pride in making each project a unique
+            digital experience.
           </p>
         </div>
       </div>
