--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -240,7 +240,7 @@
   }
 
   .shadow-container {
-    margin-top: 10%;
+    margin-top: 15%;
   }
 
   .about-me-text {
@@ -268,7 +268,7 @@
 @media (min-width: 1024px) and (max-width: 1024px) {
   /* iPad Portrait */
   .shadow-container {
-    margin-top: -250px !important;
+    margin-top: -25% !important;
   }
 
   .photo-big {
@@ -298,13 +298,12 @@
   }
 
   .shadow-container {
-    margin-top: 250px;
+    margin-top: 25%;
   }
 
   .photo-big {
     width: 400px;
     height: 535px;
-    top: 12%;
   }
 
   .green-btn {
@@ -333,7 +332,7 @@
 
 @media (max-width: 500px) {
   .title-container {
-    bottom: 100px;
+    bottom: 15%;
 
     h1 {
       font-size: 43px;
@@ -394,16 +393,11 @@
   .photo-big {
     width: 335px;
     height: 445px;
-    top: 160px;
   }
 }
 
 @media (max-width: 380px) {
   .background {
     top: 40%;
-  }
-
-  .photo-big {
-    top: 105px;
   }
 }
