general padding/margin fixes

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -263,6 +263,10 @@ span {
     position: relative;
     top: 50px;
   }
+
+  .contact-title {
+    margin-top: 0;
+  }
 }
 
 @media (max-width: 400px) {
