--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="over-flow-x-hidden">
 <app-burger-menu
   [isMenuOpen]="isMenuOpen"
   (closeMenu)="toggleBurgerMenu()"
@@ -11,3 +12,4 @@
 
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+</div>
