--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,14 @@
-<div class="over-flow-x-hidden">
-<app-burger-menu
-  [isMenuOpen]="isMenuOpen"
-  (closeMenu)="toggleBurgerMenu()"
-></app-burger-menu>
+<div class="overflow-x-hidden">
+  <app-burger-menu
+    [isMenuOpen]="isMenuOpen"
+    (closeMenu)="toggleBurgerMenu()"
+  ></app-burger-menu>
+  <app-header
+    [isMenuOpen]="isMenuOpen"
+    [isScreenSmall]="isScreenSmall"
+    (openMenu)="toggleBurgerMenu()"
+  ></app-header>
 
-<app-header
-  [isMenuOpen]="isMenuOpen"
-  [isScreenSmall]="isScreenSmall"
-  (openMenu)="toggleBurgerMenu()"
-></app-header>
-
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
